# disposable-domain-verifier

./: .gitignore  Cargo.toml  Dockerfile  README.md  nixpacks.toml
.github/workflows/: update-blocklist.yml
assets/: blocklist.txt
scripts/: update_blocklist.sh
src/: main.rs
