[package]
name = "domain-verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
tower-http = { version = "0.6.4", features = ["trace"] }
