[package]
name = "disposable-domain-verifier"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
tower-http = { version = "0.6.4", features = ["trace"] }
ahash = "0.8"
arc-swap = "1.7"
mimalloc = "0.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

